--- a/css/site.css
+++ b/css/site.css
@@ -1,23 +1,93 @@
+
+.silkscreen-regular {
+    font-family: "Silkscreen", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  } 
+  
+.jetbrains-mono {
+    font-family: "JetBrains Mono", monospace;
+    font-optical-sizing: auto;
+    font-weight: 470;
+    font-style: normal;
+}
+
+body p{
+    font-size: 0.75em;
+}
+
 body {
     padding-top: 4rem;
-    padding-bottom: 4rem;
+    background-color: #272935;
 }
 
-.card-title{
+header .navbar_brand {
+    font-size: 2rem;
+}
+
+
+
+
+
+
+
+
+
+/* =========================================================== Pixel border */
+
+.test {
+    background-color: darkslateblue;
+
+    /*
+    border: 20px solid;
+    padding: 15px;
+    border-image: url("images/brand/brdr.png") 30 round;
+    */
+    
+    /*
+    border-style: solid;
+    border-width: 0px 20px;
+    border-image: url("images/brand/brdr.png") 0 13 round;
+    border-image-outset: 13px;
+    */
+    /*
+    border-image: url("/images/brand/brdr.png") 23 22 22 26 round;
+    */
+}
+
+
+.dropdown-menu a:hover {
+    background-color: black;
+    color: white;
+}
+
+
+.dropdown-item {
+    color: white;  
+}
+
+
+/* =========================================================== Gallery cards */
+.gallery .card-img-top {
+    width: 100%;
+    height: 35vh;
+    object-fit: cover;
+    }
+
+.gallery .card-title{
     opacity: 1;
-
 }
 
-.card-title:hover {
+.gallery .card-text{
+    opacity: 0; 
+}
+
+.gallery:hover .card-title{
     opacity: 0;
     transition: opacity 0.15s;
 }
 
-.card-text-center{
-    opacity: 0; 
-}
-
-.card-text-center:hover{
+.gallery:hover .card-text{
     opacity: 1;
     transition: opacity 0.15s;
 }
