--- a/css/site.css
+++ b/css/site.css
@@ -12,82 +12,95 @@
     font-style: normal;
 }
 
-body p{
-    font-size: 0.75em;
-}
 
 body {
     padding-top: 4rem;
     background-color: #272935;
+    font-family: "JetBrains Mono", monospace;
 }
 
+body p{
+    font-size: 0.75em;
+}
+
+
+/* =========================================================== Header */
 header .navbar_brand {
     font-size: 2rem;
-}
-
-
-
-
-
-
-
-
-
-/* =========================================================== Pixel border */
-
-.test {
-    background-color: darkslateblue;
-
-    /*
-    border: 20px solid;
-    padding: 15px;
-    border-image: url("images/brand/brdr.png") 30 round;
-    */
+    font-family: "Silkscreen", sans-serif;
+    text-decoration: none;
     
-    /*
-    border-style: solid;
-    border-width: 0px 20px;
-    border-image: url("images/brand/brdr.png") 0 13 round;
-    border-image-outset: 13px;
-    */
-    /*
-    border-image: url("/images/brand/brdr.png") 23 22 22 26 round;
-    */
 }
-
 
 .dropdown-menu a:hover {
-    background-color: black;
+    background-color: #3f4045;
     color: white;
 }
 
 
 .dropdown-item {
-    color: white;  
+    color: gainsboro;  
 }
 
 
-/* =========================================================== Gallery cards */
-.gallery .card-img-top {
+
+
+/* =========================================================== Main */
+main .card {
+    margin-bottom: 6rem;
+    background-color: #343a40;
+    box-shadow: 12px 12px 2px 1px rgba(0, 0, 41, 0.2); 
+    border-radius: 0;
+
+}
+
+main .card-img-top {
     width: 100%;
     height: 35vh;
     object-fit: cover;
     }
 
-.gallery .card-title{
+main .card-title{
     opacity: 1;
 }
 
-.gallery .card-text{
+main .card-text{
     opacity: 0; 
 }
 
-.gallery:hover .card-title{
+main .card:hover .card-title{
     opacity: 0;
     transition: opacity 0.15s;
 }
 
-.gallery:hover .card-text{
+main .card:hover .card-text{
     opacity: 1;
     transition: opacity 0.15s;
 }
+
+
+/* =========================================================== Footer */
+footer{
+    background-color: #343a40;
+    color: white;
+
+}
+
+footer .card{
+    background-color: #5667ca;
+    box-shadow: 4px 4px 2px 1px rgba(0, 0, 41, 0.2);
+    height: 30vh;
+}
+
+
+
+.btn-social {
+    color: #005fd7;
+    background-color: #cbdbfc;
+  }
+
+  .btn-social:hover {
+    color: #fff;
+    background-color: #639bff;
+  }
+  
