--- a/css/site.css
+++ b/css/site.css
@@ -109,9 +109,59 @@ footer .card{
 
 
 
+/* ABOUT =========================================================== Email */
+
+.form-inputfield {
+    display: block;
+    width: 100%;
+    height: calc(1.5em + 0.75rem + 2px);
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #707880;
+    background-color: #C5C8C6;
+    background-clip: padding-box;
+    border: 2px solid #80bdff;
+    border-radius: 0.25rem;
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.form-inputfield:hover {
+    box-shadow: 3px 3px 2px 1px rgba(0, 0, 41, 0.2);
+    outline: 1px solid #80bdff;;
+    
+}
+
+.form-inputfield:focus {
+    color: #282A2E;
+    background-color: #B294BB;
+    border-color: #85678F;
+    outline: 0;
+    box-shadow: 6px 6px 2px 1px rgba(0, 0, 41, 0.2);
+    
+}
 
 
+textarea#feedback-text {
+    min-height: 200px;
+}
 
+.chars-counter {
+    margin-top: 10px;
+    float: right;
+    color: #707880;
+}
+
+
+.warning:focus {
+    background-color: #85678F;
+    color: #B294BB;
+  }
+
+  #remaining-chars.warning {
+    color: #85678F;
+  }
 
 
 
@@ -124,7 +174,7 @@ footer .card{
   }
   
   .rating > label {
-    color: #90A0A3;
+    color: #373B41;
     float: right;
   }
   
@@ -143,13 +193,15 @@ footer .card{
   .rating > input:checked ~ label,
   .rating:not(:checked) > label:hover,
   .rating:not(:checked) > label:hover ~ label {
-    color: #F79426;
+    color: #F0C674;
   }
   
   .rating > input:checked + label:hover,
   .rating > input:checked ~ label:hover,
   .rating > label:hover ~ input:checked ~ label,
   .rating > input:checked ~ label:hover ~ label {
-    color: #FECE31;
+    color: #DE935F;
   }
 
+
+  
